# Software_3d_Renderer_Allegro

./: .gitignore  CMakeLists.txt  README.md  main.cpp
